--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "constr": "Server=WARRIOR; Database=QuranDatabase; Integrated Security=True; Trust Server Certificate=True"
+    "constr": "Server=WARRIOR; Database=QuranDb; Integrated Security=True; Trust Server Certificate=True"
   }
 }
